--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -14,7 +14,7 @@
     {
       "githubId": "Hexinyiyi",
       "displayName": "HE ...NYI",
-      "authorNames": ["Hexinyiyi"]
+      "authorNames": ["He Xinyi"]
     },
     {
       "githubId": "jiacheng-panda",
