--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = 'addressbook.jar'
+    archiveName = 'iScheduler.jar'
 
     destinationDir = file("${buildDir}/jar/")
 }
