--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveName = 'addressbook.jar'
+    archiveName = 'thanepark.jar'
 
     destinationDir = file("${buildDir}/jar/")
 }
