Correct display name

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -3,7 +3,7 @@
   [
     {
       "githubId": "blewjy",
-      "displayName": "BRYAN...JU YU",
+      "displayName": "BRYAN LEW JU YU",
       "authorNames": ["blewjy", "Bryan Lew"]
     },
     {
@@ -23,7 +23,7 @@
     },
     {
       "githubId": "ChesterSng",
-      "displayName": "SNG YU FENG ESTER",
+      "displayName": "SNG YU FENG CHESTER",
       "authorNames": ["ChesterSng", "Chester Sng"]
     }
   ]
