Revert "Correct display name"
This reverts commit ded32ad83430f6d5f646865d44871e096530cba1.

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -3,7 +3,7 @@
   [
     {
       "githubId": "blewjy",
-      "displayName": "BRYAN LEW JU YU",
+      "displayName": "BRYAN...JU YU",
       "authorNames": ["blewjy", "Bryan Lew"]
     },
     {
@@ -23,7 +23,7 @@
     },
     {
       "githubId": "ChesterSng",
-      "displayName": "SNG YU FENG CHESTER",
+      "displayName": "SNG YU FENG ESTER",
       "authorNames": ["ChesterSng", "Chester Sng"]
     }
   ]
