--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "appTitle" : "Address App",
+  "appTitle" : "WatchOver",
   "logLevel" : "INFO",
   "userPrefsFilePath" : "preferences.json"
 }
