--- a/build.gradle
+++ b/build.gradle
@@ -246,4 +246,4 @@ task copyDummySearchPage(type: Copy) {
 deployOfflineDocs.dependsOn asciidoctor
 processResources.dependsOn deployOfflineDocs
 
-defaultTasks 'clean', 'headless', 'allTests', 'coverage', 'asciidoctor', 'copyDummySearchPage'
+defaultTasks 'clean', 'headless', 'allTests', 'coverage', 'asciidoctor'
