fix reposense config

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -14,7 +14,7 @@
     {
       "githubId": "adjscent",
       "displayName": "SOH...SON",
-      "authorNames": ["adjscent"]
+      "authorNames": ["adjscent", "Jason"]
     },
     {
       "githubId": "yao-feng",
