edit reposense config.json

--- a/_reposense/config.json
+++ b/_reposense/config.json
@@ -9,7 +9,7 @@
     {
       "githubId": "theJrLinguist",
       "displayName": "CHOW ...NG JI",
-      "authorNames": ["theJrLinguist"]
+      "authorNames": ["theJrLinguist", "KJ-LT\kengj"]
     },
     {
       "githubId": "adjscent",
